# 818L-project

./: python_modules_used.md
llm_reporting/: .gitignore
llm_reporting/lib/: Cargo.toml
llm_reporting/lib/src/: lib.rs
llm_reporting/program/: Cargo.toml
llm_reporting/program/src/: main.rs
llm_reporting/script/: Cargo.toml
minijolt/: automata_experiments.ipynb
minijolt/.ipynb_checkpoints/: automata_experiments-checkpoint.ipynb
purplellama_regex_rules/: load_regex_list.py
samples/: 1.csv  10.csv  10_re.txt  1_re.txt  2.csv  2_re.txt  3.csv  3_re.txt  4.csv  4_re.txt  5.csv  5_re.txt  6.csv  6_re.txt  7.csv  7_re.txt  8.csv  8_re.txt  9.csv  9_re.txt
