[package]
version = "0.1.0"
name = "regex-script"
edition = "2021"
default-run = "regex"

[[bin]]
name = "regex"
path = "src/bin/main.rs"

[[bin]]
name = "evm"
path = "src/bin/evm.rs"

[dependencies]
sp1-sdk = "3.0.0"
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde = { version = "1.0.200", default-features = false, features = ["derive"] }
clap = { version = "4.0", features = ["derive", "env"] }
tracing = "0.1.40"
hex = "0.4.3"
alloy-sol-types = { workspace = true }
regex-lib = { path = "../lib" }
bincode = "1.3.3"
regex = "1.11.1"
sha2 = "0.10.8"

[build-dependencies]
sp1-helper = "3.0.0"
